# GaussianProcesses

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: installArtifacts.yml  runTests.yml
doc/: Gaussian_Process.tex  biblio.bib  doc_gen.bat  doc_gen.sh
kernels_viz/: CMakeLists.txt  GradientVisualizer.cpp  GradientVisualizer.py  KernelVisualizer.cpp  KernelVisualizer.h  KernelsVisualizer.cpp  KernelsVisualizer.py  LikelihoodVisualizer.cpp  LikelihoodVisualizer.py  Visualizer.py
samples/: 01-METTERE_nome.cpp  01-Prediction-1d.cpp  02-Prediction-2d.cpp  CMakeLists.txt  LogUtils.cpp  LogUtils.h  Prova.cpp  Ranges.cpp  Ranges.h  ReadMe.cpp  Sample01-1D-functions.cpp  Sample01-R1-function.cpp  Sample01-functionA.cpp  Sample02-2D-functions.cpp  Sample02-R2-function.cpp  Sample03-R2-functionB.cpp  Sample03-training.cpp  Utils.cpp  Utils.h  Visualize-1D.py  Visualize-1d.py  Visualize-2D.py  Visualize-train.py  Visualize.py  Visualize01.py  Visualize02.py  VisualizeEvolution.py
src/: CMakeLists.txt
src/header/: GaussianProcess.h  Kernel.h
src/header/GaussianProcess/: Error.h  GaussianProcess.h  GaussianProcessFactory.h  GaussianProcessTrainSet.h  GaussianProcessVectorial.h  KernelAware.h  KernelCovariance.h  SpaceSizesAware.h  TrainSet.h  YYMatrices.h
src/header/GaussianProcess/components/: GaussianProcessBase.h  InputOutputSizeAware.h  KernelAware.h  KernelMatrix.h  OutputMatrix.h  OutputSetMatrixAware.h  SizesAware.h  TrainSetAware.h
src/header/GaussianProcess/kernel/: CombinedFunction.h  CompositeFunction.h  CompositeKernelFunction.h  ExponentialRBF.h  KernelFunction.h  Linear.h  ParameterHandler.h  PeriodicFunction.h  RadialBasisFunction.h  RadialFunction.h  SquaredExponential.h
src/header/GaussianProcess/train/: Trainer.h
src/src/: Common.cpp  Common.h  Error.cpp  GaussianProcess.cpp  GaussianProcessFactory.cpp  GaussianProcessVectorial.cpp  KernelCovariance.cpp  TrainSet.cpp  YYMatrices.cpp
src/src/components/: GaussianProcessBase.cpp  InputOutputSizeAware.cpp  KernelAware.cpp  OutputSetMatrixAware.cpp
src/src/kernel/: CombinedFunction.cpp  CompositeFunction.cpp  ExponentialRBF.cpp  Linear.cpp  LinearFunction.cpp  PeriodicKernel.cpp  RadialBasisFunction.cpp  RadialFunction.cpp  SquaredExponential.cpp
src/src/train/: Trainer.cpp
src2/: CMakeLists.txt
src2/header/GaussianProcess/: Error.h  GaussianProcess.h  GaussianProcessBase.h  GaussianProcessFactory.h  GaussianProcessVectorial.h  TrainSet.h  YYMatrices.h
src2/header/GaussianProcess/components/: GaussianProcessBase.h  KernelMatrix.h  OutputMatrix.h  SizesAware.h
src2/header/GaussianProcess/kernel/: CombinedFunction.h  KernelFunction.h  SquaredExponential.h
src2/src/: Common.cpp  Common.h  GaussianProcess.cpp  GaussianProcessBase.cpp  GaussianProcessFactory.cpp  GaussianProcessVectorial.cpp  KernelCovariance.cpp  KernelCovariance.h  SizesAware.cpp  SpaceSizesAware.cpp  TrainSet.cpp  YYMatrices.cpp
src2/src/components/: GaussianProcessBase.cpp  KernelMatrix.cpp  OutputMatrix.cpp
src2/src/kernel/: CombinedFunction.cpp  KernelFunction.cpp  SquaredExponential.cpp
tests/: CMakeLists.txt  GaussianProcessSlowTest.cpp  GaussianProcessTest.cpp  GpCtorTest.cpp  Grid.cpp  Grid.h  KernelFunctionsTest.cpp  KernelMatrixTest.cpp  PredictTest.cpp  RangeTest.cpp  ResizableMatrixTest.cpp  Test01-construction.cpp  Test01-reset-update.cpp  Test02-reset-update.cpp  Test03-predict.cpp  Test04-train.cpp  TrainSetTest.cpp  TrainTest.cpp  Utils.cpp  Utils.h  YYMatrixTest.cpp
